Функционал "Поиск"
Не забудьте прожать "Reload all Maven projects" в меню Maven, и обязательно удалить файлы с базой данных (новые создадутся при первом запуске, но они будут уже с новой версией БД).